--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,14 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <title>{{ site.title | default: site.github.repository_name }} by {{ site.github.owner_name }}</title>
+    <style type="text/css">
+        h3 {
+            color: #6786af;
+        }
+        a {
+            color: #0065d5;
+        }
+    </style>
   </head>
 
   <body>
