--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,21 +23,13 @@
   <body>
     <div id="container">
       <div class="inner">
-
         <header>
+	  <img src="https://avatars3.githubusercontent.com/u/1229233?v=3" height="150">
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
           <h3>{{ site.description | default: site.github.project_tagline }}</h3>
         </header>
         <section id="downloads" class="clearfix">
-          {% if site.show_downloads %}
-          <a href="{{ site.github.zip_url }}" id="download-zip" class="button"><span>Download .zip</span></a>
-          <a href="{{ site.github.tar_url }}" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
-          {% endif %}
-	  {% if site.github.is_project_page %}
-          <a href="{{ site.github.repository_url }}" id="view-on-github" class="button"><span>View on GitHub</span></a>
-	  {% else %}
-          <a href="{{ site.github.owner_url }}" id="view-on-github" class="button"><span>View on GitHub</span></a>
-	  {% endif %}  
+          <a href="{{ site.github.owner_url }}" id="view-on-github" class="button"><span></span></a>
         </section> 
         <hr>
         <section id="main_content">
